# figma-to-testcases

./: CACHING_GUIDE.md  README.md  demo_output.json  demo_ui.py  generate_figma_json.py  generate_prd_doc_json.py  normalize_json.py  pyproject.toml  qa_test_generator.db  requirements.txt  screens.json  server.py  single_screen_tests.json  test_cases.json  test_cases.py  test_filter.py  tool_architecture.md
app/: config.py
app/data/: test_baseline.json
app/models/: database.py
app/schemas/: __init__.py
app/services/: __init__.py  cache_manager.py  document_parser.py  evaluator.py  feedback_manager.py  figma_client.py  json_loader.py  prd_analyzer.py  test_generator.py
qa-angular-ui/: README.md  README_PROJECT.md  angular.json  package.json  tsconfig.json
qa-angular-ui/src/: index.html  main.ts  styles.scss
qa-angular-ui/src/app/: README_COMPONENTS.md  app.component.ts  app.routes.ts
qa-angular-ui/src/app/layout/: sidebar.component.ts  topbar.component.ts
qa-angular-ui/src/app/models/: api-response.model.ts  test-case.model.ts
qa-angular-ui/src/app/pages/: dashboard.component.ts  generate-test.component.ts  settings.component.ts  test-list.component.ts
qa-angular-ui/src/environments/: environment.prod.ts
qa-ui/: README.md  angular.json  package-lock.json  package.json
qa-ui/src/: index.html  styles.scss
qa-ui/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
scripts/: create_fields.py  create_issue_type.py  create_ticket.py  evaluate_demo.py
tests/: test_document_parser.py  test_figma_client.py  test_generator.py
(+41 files in other folders)
